# senior-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
blender/: level1.blend  level2.blend
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
resources/: settings.ini
resources/levels/: level1.txt  level2.txt  level3.txt
resources/other/: cube3.xcf
resources/shaders/: cubemap_frag.glsl  cubemap_geom.glsl  cubemap_vert.glsl  depth_frag.glsl  depth_vert.glsl  depthdebug_frag.glsl  lightmap_frag.glsl  lightmap_vert.glsl  mat_frag.glsl  mat_vert.glsl  portal_frag.glsl  portal_vert.glsl  portallight_frag.glsl  portallight_vert.glsl  tex_frag.glsl  tex_vert.glsl  wall_frag.glsl  wall_vert.glsl  walllight_frag.glsl  walllight_vert.glsl
scripts/: portal_level_export.py
shaders/: wall_vert.glsl
src/: Application.cpp  Application.h  BVH.cpp  BVH.h  Box.cpp  Box.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Controls.cpp  Controls.h  Door.cpp  Door.h  GameObject.cpp  GameObject.h  GeometryProgram.cpp  GeometryProgram.h  HUD.cpp  HUD.h  KDTree.cpp  KDTree.h  LightSwitch.cpp  LightSwitch.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  MatrixStack.cpp  MatrixStack.h  MiscItem.cpp  MiscItem.h  ModelManager.cpp  ModelManager.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Portal.cpp  Portal.h  (+25 more)
